--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 
   <script src="./bower_components/underscore/underscore.js"></script>
   <script src="models/Question.js"></script>
-  <!-- <script src="./collections"></script> -->
-  <script src="views/QuestionView.js"></script>
 </head>
 <body>
+hello world!
   <div id="main"></div>
   <script>
 
